--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>org.example</groupId>
     <artifactId>my-app</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging> jar </packaging>
@@ -49,7 +49,7 @@
                          </execution>
                      </executions>
                      <configuration>
-                         <mainClass>com.example.App</mainClass>
+                         <mainClass>org.example.App</mainClass>
                      </configuration>
                  </plugin>
             <plugin>
